---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 04/02/26
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when a hex core GUI is open.
---------------------------------------------------------------------------------------------------
Version: 1.6.6
Date: 4/2/26
  Bugfixes:
    - Fixed rare crash when you open an equipment grid while viewing a hex core right before a train makes a trade at that hex core.
---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 4/2/26
  Gui:
    - Improved the quality selection GUI for trades, reducing icon clutter and showing only valid choices.
    - Trades in the hex core GUI now separately show the quality (trade productivity and the quality symbols on items) to which they are set.
    - Removed the quality dropdown to the right of the "Trades" header in the hex core GUI.
  Bugfixes:
    - Fixed that hex core GUI was sometimes getting updated rapidly and interfering with GUI controls. 
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 3/2/26
  Bugfixes:
    - Spiral world generation now respects planet size settings.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 3/2/26
  Features:
    - Added the mod setting "World Generation Mode" for controlling the shape of terrain generation, currently with "Standard", "Spiral", and "Maze" modes.
  Bugfixes:
    - Added missing migration for existing hex core loaders to become rotatable.
  Scripting:
    - Added the remote interface "gameplay_statistics_recalculators".
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 3/2/26