@@ -1299,7 +1299,11 @@ end
 ---@param entity_that_caused LuaEntity
 ---@param damage_type_prot LuaDamagePrototype|nil
 function quests.on_entity_killed_entity(entity_that_died, entity_that_caused, damage_type_prot)
-    gameplay_statistics.increment("kill-entity", 1, entity_that_died.name)
+    if not entity_that_died.valid then return end -- This somehow is needed?  A crash had occurred because this check wasn't here.  EVEN THOUGH this event is only triggered AFTER VALIDITY IS CHECKED.
+
+    gameplay_statistics.increment("kill-entity", 1, entity_that_died.name) -- This did not cause a crash, but the name == "character" check below did.  Seems impossible.  Something VERY weird is going on here.
+
+    if not entity_that_died.valid then return end -- This somehow is needed?  A crash had occurred because this check wasn't here.  What happens in the code above to make the dying entity invalid??? How is that crash reproduced?
 
     if damage_type_prot then
         if entity_that_caused.force.name == "player" then
@@ -1307,11 +1311,15 @@ function quests.on_entity_killed_entity(entity_that_died, entity_that_caused, da
         end
     end
 
+    if not entity_that_died.valid then return end -- This somehow is needed?  A crash had occurred because this check wasn't here.  What happens in the code above to make the dying entity invalid??? How is that crash reproduced?
+
     if entity_that_died.name == "biter-spawner" or entity_that_died.name == "spitter-spawner" then
         if entity_that_caused.name == "car" or entity_that_caused.name == "tank" then
             gameplay_statistics.increment "biter-ramming"
         end
     end
+
+    if not entity_that_died.valid then return end -- This somehow is needed?  A crash had occurred because this check wasn't here.  What happens in the code above to make the dying entity invalid??? How is that crash reproduced?
 
     -- This is not in on_player_died because the damage type for cause of death is important.
     if entity_that_died.name == "character" then
