@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.8
 Date: 04/02/26
+  Bugfixes:
+    - Fixed biter ramming crash.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.7
 Date: 4/2/26
